--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,5 @@ NOTION_TOKEN=YOUR_NOTION_TOKEN_HERE
 NOTION_CHANNELS_DB=YOUR_CHANNELS_DB_ID_HERE
 NOTION_CLAIMED_DB=YOUR_CLAIMED_DB_ID_HERE
 
-# Admin User ID (only this user can use /claim command)
-ADMIN_USER_ID=YOUR_DISCORD_USER_ID_HERE
+# Admin User ID (comma-separated for multiple admins)
+ADMIN_USER_ID=USER_ID_1,USER_ID_2
